<resources>
    <string name="app_name">Radio Player</string>
    <string name="action_settings">Settings</string>
    <string name="dirble_api_key">18572bdfe9011ea4a2af1c56eb</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="play_button_description">Play and stop the current selection</string>
    <string name="previous_button_description">Skip to the previous radio station</string>
    <string name="next_button_description">Skip to next radio station</string>
    <string name="notification_playing_stream">Playing audio stream</string>
    <string name="item_image_logo">image logo</string>
    <string name="list_recycler_progress_indicator">Updating station list...</string>
    <string name="player_content_description">Radio player background image</string>
    <string name="equalizer_content_description">Radio player equalizer animation</string>
    <string name="application_logo_description">Application logo</string>
</resources>
