<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dimen_large"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.radioplayer.activity.PlayerActivity"
    tools:showIn="@layout/activity_player">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_marginLeft="@dimen/progress_bar_left_margin"
        android:layout_marginStart="@dimen/progress_bar_left_margin"
        android:layout_marginBottom="@dimen/progress_bar_bottom_margin"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="@dimen/progress_bar_dimen"
        android:layout_height="@dimen/progress_bar_dimen"/>


    <RelativeLayout
        android:id="@+id/player_controls"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previous_button"
            android:src="@drawable/action_previous"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_button_description"
            android:layout_width="@dimen/player_button_dimen"
            android:layout_height="@dimen/player_button_dimen"/>

        <ImageButton
            android:id="@+id/play_stop_button"
            android:src="@drawable/action_play"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/play_button_description"
            android:layout_width="@dimen/player_button_dimen"
            android:layout_height="@dimen/player_button_dimen"/>

        <ImageButton
            android:id="@+id/next_button"
            android:src="@drawable/action_next"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/next_button_description"
            android:layout_width="@dimen/player_button_dimen"
            android:layout_height="@dimen/player_button_dimen"/>

    </RelativeLayout>



</RelativeLayout>
